fix bug with dark mode

--- a/css/label.css
+++ b/css/label.css
@@ -1,14 +1,13 @@
-/* Masquer tous les titres par défaut */
 h3 {
     display: none;
 }
 
-/* Afficher le titre si un <li> de la catégorie est visible */
+
 ul:has(li:not([style*="display: none"])) + h3 {
     display: block;
 }
 
-/* Ajout d'un tag 'all' pour tout afficher */
+
 .tag-filter {
     display: inline-block;
     background-color: #ffffff;
@@ -19,7 +18,6 @@ ul:has(li:not([style*="display: none"])) + h3 {
     cursor: pointer;
     border-radius: 15px;
     border: 2px solid #04AA6D;
-    transition: background-color 0.3s ease;
 }
 
 .tag-filter.active {
